--- a/styles/header.css
+++ b/styles/header.css
@@ -4,6 +4,6 @@
     background-image: url("../imagens/Menu.svg");
     display: inline-block;
   }
-  .cabeçalho{
+  .cabecalho{
     background-color: var(--branco);
   }
