--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,3 +15,15 @@ body{
 h1{
     background-color:  var(--branco);
 }
+
+@media screen and (min-width: 1024px) {  
+
+    .container__menu-titulo{
+      display: block;
+    }
+
+    .container__menu-titulo:last-child{
+      padding-right: 1em;
+    }
+
+  }
